# svg_to_react_coffee

./: .gitignore  Cargo.toml  README.md  resources.md
lib/: lib.rs
lib/file_loading/: loader.rs
lib/parser/: attribute.rs  element.rs  mod.rs  parser.rs  util.rs
src/: main.rs
src/file_loading/: loader.rs
src/parser/: attribute.rs  element.rs  parser.rs  util.rs
