[package]
name = "svg_to_react_coffee"
version = "0.2.0"
authors = ["Josh Teeter <joshteeter@gmail.com>"]
license = "MIT"
description = "A SVG to Reactified coffeescript parser in pure Rust"
repository ="https://github.com/whatisinternet/svg_to_react_coffee"
readme = "README.md"
keywords = ["svg", "react", "coffeescript"]

[lib]
crate_type= ["dylib", "rlib"]
name = "svg_to_react"
path = "lib/lib.rs"

[[bin]]
name = "svg_to_react_bin"
path = "src/main.rs"

[dependencies]
libc = "0.1"
xml-rs = "0.1.25"
case = "0.0.1"
